Added Product Page

--- a/home.html
+++ b/home.html
@@ -79,13 +79,16 @@
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./images/strawberry.jpeg" class="d-block w-100" alt="Fruit">
+                    <img src="./images/Avacado-204x210.jpeg" class="d-block w-100" alt="Fruit">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/flour.jpeg" class="d-block w-100" alt="Flour">
+                    <img src="./images/red-lettuce-204x210.jpg" class="d-block w-100" alt="Flour">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/staranise.avif" class="d-block w-100" alt="Spice">
+                    <img src="./images/Millet-powderr-204x210.jpg" class="d-block w-100" alt="Spice">
+                </div>
+                <div class="carousel-item">
+                    <img src="./images/Spinach-204x210.jpg" class="d-block w-100" alt="Spice">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
