Added product page for Sweet Corn

--- a/products.html
+++ b/products.html
@@ -63,72 +63,72 @@
 
     <!-- Card for Products-->
 
-    <div class="container mt-2 g-5">
-        <div class="row">
+    <div class="container mt-2">
+        <div class="row p-5 g-2">
             <div class="card" style="width: 18rem;">
                 <img src="./images/products/20SweetCorn-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
-                    <h5 class="card-title">Cauliflower</h5>
+                    <h5 class="card-title">Sweet Corn</h5>
                     <p class="card-text">Lorem Ipsum</p>
-                    <a href="#" class="btn btn-primary">Go meet her !!</a>
+                    <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="./images/products/40RedPumpkin-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
-                    <h5 class="card-title">Cauliflower</h5>
+                    <h5 class="card-title">Pumpkin</h5>
                     <p class="card-text">Lorem Ipsum</p>
-                    <a href="#" class="btn btn-primary">Go meet her !!</a>
+                    <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="./images/products/cloves-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
-                    <h5 class="card-title">Cauliflower</h5>
+                    <h5 class="card-title">Cloves</h5>
                     <p class="card-text">Lorem Ipsum</p>
-                    <a href="#" class="btn btn-primary">Go meet her !!</a>
+                    <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
             
             <div class="card" style="width: 18rem;">
                 <img src="./images/products/CoconutOil-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
-                    <h5 class="card-title">Cauliflower</h5>
+                    <h5 class="card-title">Coconut Oil</h5>
                     <p class="card-text">Lorem Ipsum</p>
-                    <a href="#" class="btn btn-primary">Go meet her !!</a>
+                    <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="./images/products/Deha_s_Organic_Chai_-_Assam_Green_Tea_-_02_1024x1024-204x210.jpg"
                     class="card-img-top" alt="Cat1">
                 <div class="card-body">
-                    <h5 class="card-title">Cauliflower</h5>
+                    <h5 class="card-title">Organic Tea</h5>
                     <p class="card-text">Lorem Ipsum</p>
-                    <a href="#" class="btn btn-primary">Go meet her !!</a>
+                    <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="./images/products/honey.avif" class="card-img-top" alt="Cat1">
+                <img src="./images/products/Honey2-204x210.jpeg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
-                    <h5 class="card-title">Cauliflower</h5>
+                    <h5 class="card-title">Honey</h5>
                     <p class="card-text">Lorem Ipsum</p>
-                    <a href="#" class="btn btn-primary">Go meet her !!</a>
+                    <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="./images/products/desigherglassbottle-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
-                    <h5 class="card-title">Cauliflower</h5>
+                    <h5 class="card-title">Clarified Butter/Ghee</h5>
                     <p class="card-text">Lorem Ipsum</p>
-                    <a href="#" class="btn btn-primary">Go meet her !!</a>
+                    <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="./images/products/Hummus-204x210.jpeg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
-                    <h5 class="card-title">Cauliflower</h5>
+                    <h5 class="card-title">Hummus</h5>
                     <p class="card-text">Lorem Ipsum</p>
-                    <a href="#" class="btn btn-primary">Go meet her !!</a>
+                    <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
         </div>
@@ -137,7 +137,7 @@
 
 
 
-
+        <!--Dummy container with some height to keep cards above footer-->
 
         <div class="container dummycontainer"></div>
 
