Added navbar and products info

--- a/products.html
+++ b/products.html
@@ -17,48 +17,40 @@
 
 <body>
 
-    <div class="container">
+    <header>
+        <nav class="navbar navbar-expand-md fixed-top bg-success">
+            <div class="container">
+                <a class="navbar-brand" href="home.html">
+                    <img src="images/Earth Express.png" width="60" height="60" class="d-inline-block align-top"
+                        alt="Earth Express Logo">
+                    Earth Express
+                </a>
 
-        <!--  Navigation Menu -->
-
-        <nav class="navbar navbar-expand-md navbar-static-top bg-success">
-            <div class="container me-0 ms-0">
-                <div class="d-flex flex-row">
-                    <div class="col-4 ">
-                        <a href="home.html" class="navbar-brand"></a>
-                        <img src="./images/Earth Express.png" alt="SiteLogo">
-                    </div>
-
-                    <div class="col-4 mt-2">
-                        <span> Lorem ipsum dolor</span>
-                    </div>
-
-
-                    <!-- Hamburger menu trial-->
-                    <!--<button class="navbar-toggler" type="button" data-bs-toggler="collapse"
-                    data-bs-target="#navbardropdown">
-                    <span class="navbar-toggler-icon"></span>
-                    </button> 
-                    <div class="collapse navbar-collapse" id="navbardropdown"> -->
-
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Register</a>
+                <div class="collapse navbar-collapse" id="navbarCollpase">
+                    <ul class="nav navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a href="home.html" class="nav-link active">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Cart</a>
+                            <a href="products.html" class="nav-link">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Account</a>
+                            <a href="register.html" class="nav-link">Register</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a href="login.html" class="nav-link">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="cart.html" class="nav-link">Cart</a>
+                        </li>
                     </ul>
-
-
                 </div>
             </div>
         </nav>
-    </div>
+    </header>
+
+
+
 
 
     <!-- Card for Products-->
@@ -69,7 +61,9 @@
                 <img src="./images/products/20SweetCorn-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Sweet Corn</h5>
-                    <p class="card-text">Lorem Ipsum</p>
+                    <p class="card-text">Organic sweet corn: Nature's summer delight, bursting with sweetness and
+                        freshness in every kernel.
+                    </p>
                     <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
@@ -77,7 +71,9 @@
                 <img src="./images/products/40RedPumpkin-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Pumpkin</h5>
-                    <p class="card-text">Lorem Ipsum</p>
+                    <p class="card-text">Pumpkin: A versatile and nutrient-rich squash, perfect for both savory and
+                        sweet culinary creations.
+                    </p>
                     <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
@@ -85,16 +81,20 @@
                 <img src="./images/products/cloves-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Cloves</h5>
-                    <p class="card-text">Lorem Ipsum</p>
+                    <p class="card-text">Clove: A fragrant spice with a warm, spicy-sweet flavor, adding depth to dishes
+                        and beverages alike.
+                    </p>
                     <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
-            
+
             <div class="card" style="width: 18rem;">
                 <img src="./images/products/CoconutOil-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Coconut Oil</h5>
-                    <p class="card-text">Lorem Ipsum</p>
+                    <p class="card-text">Coconut oil: A versatile and nutrient-rich oil extracted from mature coconuts,
+                        prized for its myriad culinary, beauty, and health benefits.
+                    </p>
                     <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
@@ -103,7 +103,9 @@
                     class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Organic Tea</h5>
-                    <p class="card-text">Lorem Ipsum</p>
+                    <p class="card-text">Organic tea: Sustainably grown and meticulously crafted, offering pure, natural
+                        flavors and a soothing sip of wellness in every cup.
+                    </p>
                     <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
@@ -111,7 +113,9 @@
                 <img src="./images/products/Honey2-204x210.jpeg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Honey</h5>
-                    <p class="card-text">Lorem Ipsum</p>
+                    <p class="card-text">Organic honey: Nature's golden elixir, ethically sourced and brimming with the
+                        rich essence of floral nectar, offering sweetness with integrity.
+                    </p>
                     <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
@@ -119,7 +123,9 @@
                 <img src="./images/products/desigherglassbottle-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Clarified Butter/Ghee</h5>
-                    <p class="card-text">Lorem Ipsum</p>
+                    <p class="card-text">Ghee: Liquid gold of the kitchen, a clarified butter rich in flavor and
+                        tradition, perfect for enhancing dishes with its nutty aroma and creamy texture.
+                    </p>
                     <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
@@ -127,7 +133,9 @@
                 <img src="./images/products/Hummus-204x210.jpeg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Hummus</h5>
-                    <p class="card-text">Lorem Ipsum</p>
+                    <p class="card-text">Hummus: A creamy and flavorful dip made from chickpeas, tahini, lemon juice,
+                        and garlic, perfect for spreading on crackers or dipping veggies.
+                    </p>
                     <a href="#" class="btn btn-primary">View Details</a>
                 </div>
             </div>
