--- a/home.html
+++ b/home.html
@@ -17,50 +17,40 @@
 
 <body>
 
-    <div class="container">
-
-        <!--  Navigation Menu -->
-
-        <nav class="navbar navbar-expand-md navbar-static-top bg-success">
-            <div class="container me-0 ms-0">
-                <div class="d-flex flex-row">
-                    <div class="col-4 ">
-                        <a href="home.html" class="navbar-brand"></a>
-                        <img src="./images/Earth Express.png" alt="SiteLogo">
-                    </div>
-
-                    <div class="col-4 mt-2">
-                        <span> Lorem ipsum dolor</span>
-                    </div>
-
-
-                    <!-- Hamburger menu trial-->
-                    <!--<button class="navbar-toggler" type="button" data-bs-toggler="collapse"
-                    data-bs-target="#navbardropdown">
-                    <span class="navbar-toggler-icon"></span>
-                    </button> 
-                    <div class="collapse navbar-collapse" id="navbardropdown"> -->
-
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Register</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Cart</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Account</a>
-                            </li>
-
-                        </ul>
-                    
-
+    <!--Navigation Section-->
+    <header>
+        <nav class="navbar navbar-expand-md fixed-top bg-success">
+            <div class="container">
+                <a class="navbar-brand" href="home.html">
+                    <img src="images/Earth Express.png" width="60" height="60"
+                    class="d-inline-block align-top" alt="Earth Express Logo">
+                    Earth Express
+                </a>
+            
+                <div class="collapse navbar-collapse" id="navbarCollpase">
+                    <ul class="nav navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a href="home.html" class="nav-link active">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="products.html" class="nav-link">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="register.html" class="nav-link">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="login.html" class="nav-link">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="cart.html" class="nav-link">Cart</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
-    </div>
+    </header>
 
-    <!-- Header Section -->
+    <!-- Headline Section -->
 
 
     <div class="container">
@@ -101,13 +91,13 @@
             </button>
         </div>
 
-
+    </div>
 
 
         <!-- Container for main content-->
 
         <div class="container mt-5">
-            <p class="border text-white rounded-5 bg-secondary">
+            <p class="border rounded-5 bg-warning">
                 Welcome to Earth-Express, your one-stop destination for all things organic and wholesome! Nestled in the
                 heart of the digital realm, our virtual aisles brim with a bounty of nature's finest offerings,
                 handpicked to nourish both body and soul. With a steadfast commitment to sustainability and purity,
@@ -115,7 +105,7 @@
                 producers worldwide. Whether you're a seasoned health enthusiast or just beginning your journey towards
                 cleaner living, our platform strives to make wholesome choices accessible and convenient for all.
             </p>
-            <p class="border text-white rounded-5 bg-secondary style="padding-bottom:100px;">
+            <p class="border rounded-5 bg-warning style="padding-bottom:100px;">
                 At Earth-Express, we believe that every purchase is a vote for the kind of world we wish to inhabit.
                 That's why we're dedicated to fostering a community of conscious consumers who prioritize not only their
                 own well-being but also the health of the planet. From crisp, organic produce bursting with flavor to
@@ -157,7 +147,7 @@
                             <li>Help and Support</li>
                             <li>Terms and Conditions</li>
                         </ul>
-                    </div>
+                    </div> 
                 </div>
             </div>
         </footer>
