--- a/register.html
+++ b/register.html
@@ -15,50 +15,43 @@
 
 </head>
 
-<body>
+<body style="background-image: none;">
+    <div class="container" >
 
-    <div class="container">
-
-        <!--  Navigation Menu -->
-
-        <nav class="navbar navbar-expand-md navbar-static-top bg-success">
-            <div class="container me-0 ms-0">
-                <div class="d-flex flex-row">
-                    <div class="col-4 ">
-                        <a href="home.html" class="navbar-brand"></a>
-                        <img src="./images/Earth Express.png" alt="SiteLogo">
+        <header>
+            <nav class="navbar navbar-expand-md fixed-top bg-success">
+                <div class="container">
+                    <a class="navbar-brand" href="home.html">
+                        <img src="images/Earth Express.png" width="60" height="60"
+                        class="d-inline-block align-top" alt="Earth Express Logo">
+                        Earth Express
+                    </a>
+                
+                    <div class="collapse navbar-collapse" id="navbarCollpase">
+                        <ul class="nav navbar-nav mr-auto">
+                            <li class="nav-item active">
+                                <a href="home.html" class="nav-link active">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="products.html" class="nav-link">Products</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="register.html" class="nav-link">Register</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="login.html" class="nav-link">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="cart.html" class="nav-link">Cart</a>
+                            </li>
+                        </ul>
                     </div>
-
-                    <div class="col-4 mt-2">
-                        <span> Lorem ipsum dolor</span>
-                    </div>
-
-
-                    <!-- Hamburger menu trial-->
-                    <!--<button class="navbar-toggler" type="button" data-bs-toggler="collapse"
-                    data-bs-target="#navbardropdown">
-                    <span class="navbar-toggler-icon"></span>
-                    </button> 
-                    <div class="collapse navbar-collapse" id="navbardropdown"> -->
-
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Register</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Cart</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Account</a>
-                        </li>
-
-                    </ul>
-
-
                 </div>
-            </div>
-        </nav>
-    </div>
+            </nav>
+        </header>
+    
+
+
 
     <!-- Register Form -->
 
@@ -88,7 +81,7 @@
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                 <label class="form-check-label" for="exampleCheck1">Remember me</label>
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary">Register</button>
         </form>
 
     </div>
