--- a/sweetcorn.html
+++ b/sweetcorn.html
@@ -11,7 +11,52 @@
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-md fixed-top bg-success">
+            <div class="container">
+                <a class="navbar-brand" href="home.html">
+                    <img src="images/Earth Express.png" width="60" height="60"
+                    class="d-inline-block align-top" alt="Earth Express Logo">
+                    Earth Express
+                </a>
+            
+                <div class="collapse navbar-collapse" id="navbarCollpase">
+                    <ul class="nav navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a href="home.html" class="nav-link active">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="products.html" class="nav-link">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="register.html" class="nav-link">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="login.html" class="nav-link">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="cart.html" class="nav-link">Cart</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
+
     <div class="container">
+        <nav class="my-3 ms-3">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/">Home</a></li>
+                <li class="breadcrumb-item"><a href="#">Products</a></li>
+                <li class="breadcrumb-item active">Sweet Corn</li>
+
+            </ol>
+
+        </nav>
+
+
         <h3 class="fw-bolder">Sweet Corn</h3>
         <div class="row">
             <div class="col-lg-8 col-sm-6">
