Added register and log-in forms

--- a/register.html
+++ b/register.html
@@ -57,31 +57,31 @@
 
     <div class="container mt-5">
         <p>Let's get you up and running with you online account.We need few details.</p>
-        <form>
+        <form class="border border-dark border-3 pb-1">
             <h2 class="text-center">Account Details</h2>
-            <div class="form-group">
+            <div class="form-group m-2">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" class="form-control" id="exampleInputuserid" placeholder="Enter Username">
                 
               </div>
-              <div class="form-group">
+              <div class="form-group m-2">
                 <label for="exampleInputPassword1">Password</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
               </div>
-              <div class="form-group">
+              <div class="form-group m-2">
                 <label for="exampleInputPassword1">Password Confirmation</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
               </div>
-              <div class="form-group">
+              <div class="form-group m-2">
                 <label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
               </div>
-              <div class="form-check">
+              <div class="form-check m2-2">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                 <label class="form-check-label" for="exampleCheck1">Remember me</label>
               </div>
-              <button type="submit" class="btn btn-primary">Register</button>
+              <button type="submit" class="btn btn-primary m-2 width=30px">Register</button>
         </form>
 
     </div>
