Added shopping cart

--- a/register.html
+++ b/register.html
@@ -74,13 +74,27 @@
               </div>
               <div class="form-group m-2">
                 <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="name@email.com">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
               </div>
-              <div class="form-check m2-2">
+              
+              <div class="form-check m-2">
+                <label for="citySelect" class="form-label">Select your City</label>
+                <select name="" id="citySelect" class="form-select">
+                    <option selected>Choose your city</option>
+                    <option value="1">Bengaluru</option>
+                    <option value="2">Draper</option>
+                    <option value="3">Texas</option>
+                    <option value="4">Dublin</option>
+                    
+                </select>
+              </div>
+
+              <div class="form-check m-2">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                 <label class="form-check-label" for="exampleCheck1">Remember me</label>
               </div>
+
               <button type="submit" class="btn btn-primary m-2 width=30px">Register</button>
         </form>
 
