--- a/products.html
+++ b/products.html
@@ -64,7 +64,7 @@
                     <p class="card-text">Organic sweet corn: Nature's summer delight, bursting with sweetness and
                         freshness in every kernel.
                     </p>
-                    <a href="#" class="btn btn-primary">View Details</a>
+                    <a href="./sweetcorn.html" class="btn btn-primary">View Details</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
