--- a/login.html
+++ b/login.html
@@ -56,14 +56,18 @@
     <!-- Login Form -->
     
     <div class="container mt-5">
-        <form class="border border-3 border-dark ">
+        <form class="border border-3 border-dark needs-validation" novalidate>
             <h2 class="text-center">Login Page</h2>
             <div class="m-2">
                 <label for="username" class="form-label">Username : </label>
                 <input type="text" placeholder="Enter Username" name="username" required class="form-control">
+                <div class="invalid-feedback"> Please fill a valid username </div>
+
                 <div class="mb-3">
                     <label for="" password" class="formlablel">Password : </label>
                     <input type="password" placeholder="Enter Password" name="password" required class="form-control">
+                    <div class="invalid-feedback"> Please fill a valid password </div>
+
                 </div>
                 <button type="submit" class="btn btn-success">Login</button>
                 <div class="mb-3"></div>
@@ -127,6 +131,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="./scripts/formvalidation.script"></script>
 
 </body>
 
