--- a/products.html
+++ b/products.html
@@ -17,6 +17,7 @@
 
 <body>
 
+    !-- Navigation Bar -->
     <header>
         <nav class="navbar navbar-expand-md fixed-top bg-success">
             <div class="container">
