Did html validation

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-md fixed-top bg-success">
             <div class="container">
                 <a class="navbar-brand" href="home.html">
-                    <img src="images/Earth Express.png" width="60" height="60"
+                    <img src="images/Earth_Express.png" width="60" height="60"
                     class="d-inline-block align-top" alt="Earth Express Logo">
                     Earth Express
                 </a>
@@ -105,7 +105,7 @@
                 producers worldwide. Whether you're a seasoned health enthusiast or just beginning your journey towards
                 cleaner living, our platform strives to make wholesome choices accessible and convenient for all.
             </p>
-            <p class="border rounded-5 bg-warning style="padding-bottom:100px;">
+            <p class="border rounded-5 bg-warning" style="padding-bottom:100px;">
                 At Earth-Express, we believe that every purchase is a vote for the kind of world we wish to inhabit.
                 That's why we're dedicated to fostering a community of conscious consumers who prioritize not only their
                 own well-being but also the health of the planet. From crisp, organic produce bursting with flavor to
@@ -154,7 +154,7 @@
 
 
 
-    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
