--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-md fixed-top bg-success">
             <div class="container">
                 <a class="navbar-brand" href="home.html">
-                    <img src="images/Earth Express.png" width="60" height="60"
+                    <img src="images/Earth_Express.png" width="60" height="60"
                     class="d-inline-block align-top" alt="Earth Express Logo">
                     Earth Express
                 </a>
@@ -60,12 +60,12 @@
             <h2 class="text-center">Login Page</h2>
             <div class="m-2">
                 <label for="username" class="form-label">Username : </label>
-                <input type="text" placeholder="Enter Username" name="username" required class="form-control">
+                <input type="text" placeholder="Enter Username" id="username" required class="form-control">
                 <div class="invalid-feedback"> Please fill a valid username </div>
 
                 <div class="mb-3">
-                    <label for="" password" class="formlablel">Password : </label>
-                    <input type="password" placeholder="Enter Password" name="password" required class="form-control">
+                    <label for="password" class="formlablel">Password : </label>
+                    <input type="password" placeholder="Enter Password" id="password" required class="form-control">
                     <div class="invalid-feedback"> Please fill a valid password </div>
 
                 </div>
