--- a/products.html
+++ b/products.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-md fixed-top bg-success">
             <div class="container">
                 <a class="navbar-brand" href="home.html">
-                    <img src="images/Earth Express.png" width="60" height="60" class="d-inline-block align-top"
+                    <img src="images/Earth_Express.png" width="60" height="60" class="d-inline-block align-top"
                         alt="Earth Express Logo">
                     Earth Express
                 </a>
@@ -185,7 +185,7 @@
 
     </div>
 
-    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
