--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
             <nav class="navbar navbar-expand-md fixed-top bg-success">
                 <div class="container">
                     <a class="navbar-brand" href="home.html">
-                        <img src="images/Earth Express.png" width="60" height="60"
+                        <img src="images/Earth_Express.png" width="60" height="60"
                         class="d-inline-block align-top" alt="Earth Express Logo">
                         Earth Express
                     </a>
