--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-md fixed-top bg-success">
             <div class="container">
-                <a class="navbar-brand" href="home.html">
+                <a class="navbar-brand text-white" href="home.html">
                     <img src="images/Earth_Express.png" width="60" height="60"
                     class="d-inline-block align-top" alt="Earth Express Logo">
                     Earth Express
@@ -30,19 +30,19 @@
                 <div class="collapse navbar-collapse" id="navbarCollpase">
                     <ul class="nav navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a href="home.html" class="nav-link active">Home</a>
+                            <a href="home.html" class="nav-link active text-white">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="products.html" class="nav-link">Products</a>
+                            <a href="products.html" class="nav-link text-white">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a href="register.html" class="nav-link">Register</a>
+                            <a href="register.html" class="nav-link text-white">Register</a>
                         </li>
                         <li class="nav-item">
-                            <a href="login.html" class="nav-link">Login</a>
+                            <a href="login.html" class="nav-link text-white">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a href="cart.html" class="nav-link">Cart</a>
+                            <a href="cart.html" class="nav-link text-white">Cart</a>
                         </li>
                     </ul>
                 </div>
@@ -53,19 +53,20 @@
     <!-- Headline Section -->
 
 
-    <div class="container">
+    <div class="container mt-5 ">
         <div class="row mb-5 text-center">
             <div class="col-12 text-container">
-                <h1 class="text-secondary mt-5">
-                    Welcome to Earth Express.
-                </h1>
+                <p class="text-warning bg-warning-50 fw-bold display-2">
+                    Welcome to <i class="text-success">Earth</i> Express
+                </p>
                 
             </div>
         </div>
     </div>
 
     <!-- Carousel for Promos-->
-    <div class="container col-6">
+    <div class="row bg-warning">
+    <div class="container col-8 border-lg">
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -92,12 +93,13 @@
         </div>
 
     </div>
+    </div>
 
 
         <!-- Container for main content-->
 
         <div class="container mt-5">
-            <p class="border rounded-5 bg-warning">
+            <p class="border rounded-5 bg-warning fs-4">
                 Welcome to Earth-Express, your one-stop destination for all things organic and wholesome! Nestled in the
                 heart of the digital realm, our virtual aisles brim with a bounty of nature's finest offerings,
                 handpicked to nourish both body and soul. With a steadfast commitment to sustainability and purity,
@@ -105,7 +107,7 @@
                 producers worldwide. Whether you're a seasoned health enthusiast or just beginning your journey towards
                 cleaner living, our platform strives to make wholesome choices accessible and convenient for all.
             </p>
-            <p class="border rounded-5 bg-warning" style="padding-bottom:100px;">
+            <p class="border rounded-5 bg-warning fs-4" style="padding-bottom:100px;">
                 At Earth-Express, we believe that every purchase is a vote for the kind of world we wish to inhabit.
                 That's why we're dedicated to fostering a community of conscious consumers who prioritize not only their
                 own well-being but also the health of the planet. From crisp, organic produce bursting with flavor to
