--- a/products.html
+++ b/products.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-md fixed-top bg-success">
             <div class="container">
-                <a class="navbar-brand" href="home.html">
+                <a class="navbar-brand text-white" href="home.html">
                     <img src="images/Earth_Express.png" width="60" height="60" class="d-inline-block align-top"
                         alt="Earth Express Logo">
                     Earth Express
@@ -30,19 +30,19 @@
                 <div class="collapse navbar-collapse" id="navbarCollpase">
                     <ul class="nav navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a href="home.html" class="nav-link active">Home</a>
+                            <a href="home.html" class="nav-link active text-white">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="products.html" class="nav-link">Products</a>
+                            <a href="products.html" class="nav-link text-white">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a href="register.html" class="nav-link">Register</a>
+                            <a href="register.html" class="nav-link text-white">Register</a>
                         </li>
                         <li class="nav-item">
-                            <a href="login.html" class="nav-link">Login</a>
+                            <a href="login.html" class="nav-link text-white">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a href="cart.html" class="nav-link">Cart</a>
+                            <a href="cart.html" class="nav-link text-white">Cart</a>
                         </li>
                     </ul>
                 </div>
@@ -58,48 +58,48 @@
 
     <div class="container mt-2">
         <div class="row p-5 g-2">
-            <div class="card" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 18rem;">
                 <img src="./images/products/20SweetCorn-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Sweet Corn</h5>
                     <p class="card-text">Organic sweet corn: Nature's summer delight, bursting with sweetness and
                         freshness in every kernel.
                     </p>
-                    <a href="./sweetcorn.html" class="btn btn-primary">View Details</a>
+                    <a href="./sweetcorn.html" class="btn btn-success">View Details</a>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 18rem;">
                 <img src="./images/products/40RedPumpkin-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Pumpkin</h5>
                     <p class="card-text">Pumpkin: A versatile and nutrient-rich squash, perfect for both savory and
                         sweet culinary creations.
                     </p>
-                    <a href="#" class="btn btn-primary">View Details</a>
+                    <a href="#" class="btn btn-success">View Details</a>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 18rem;">
                 <img src="./images/products/cloves-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Cloves</h5>
                     <p class="card-text">Clove: A fragrant spice with a warm, spicy-sweet flavor, adding depth to dishes
                         and beverages alike.
                     </p>
-                    <a href="#" class="btn btn-primary">View Details</a>
+                    <a href="#" class="btn btn-success">View Details</a>
                 </div>
             </div>
 
-            <div class="card" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 18rem;">
                 <img src="./images/products/CoconutOil-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Coconut Oil</h5>
                     <p class="card-text">Coconut oil: A versatile and nutrient-rich oil extracted from mature coconuts,
                         prized for its myriad culinary, beauty, and health benefits.
                     </p>
-                    <a href="#" class="btn btn-primary">View Details</a>
+                    <a href="#" class="btn btn-success">View Details</a>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 18rem;">
                 <img src="./images/products/Deha_s_Organic_Chai_-_Assam_Green_Tea_-_02_1024x1024-204x210.jpg"
                     class="card-img-top" alt="Cat1">
                 <div class="card-body">
@@ -107,39 +107,39 @@
                     <p class="card-text">Organic tea: Sustainably grown and meticulously crafted, offering pure, natural
                         flavors and a soothing sip of wellness in every cup.
                     </p>
-                    <a href="#" class="btn btn-primary">View Details</a>
+                    <a href="#" class="btn btn-success">View Details</a>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 18rem;">
                 <img src="./images/products/Honey2-204x210.jpeg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Honey</h5>
                     <p class="card-text">Organic honey: Nature's golden elixir, ethically sourced and brimming with the
                         rich essence of floral nectar, offering sweetness with integrity.
                     </p>
-                    <a href="#" class="btn btn-primary">View Details</a>
+                    <a href="#" class="btn btn-success">View Details</a>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 18rem;">
                 <img src="./images/products/desigherglassbottle-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Clarified Butter/Ghee</h5>
                     <p class="card-text">Ghee: Liquid gold of the kitchen, a clarified butter rich in flavor and
                         tradition, perfect for enhancing dishes with its nutty aroma and creamy texture.
                     </p>
-                    <a href="#" class="btn btn-primary">View Details</a>
+                    <a href="#" class="btn btn-success">View Details</a>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 18rem;">
                 <img src="./images/products/Hummus-204x210.jpeg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Hummus</h5>
                     <p class="card-text">Hummus: A creamy and flavorful dip made from chickpeas, tahini, lemon juice,
                         and garlic, perfect for spreading on crackers or dipping veggies.
                     </p>
-                    <a href="#" class="btn btn-primary">View Details</a>
+                    <a href="#" class="btn btn-success  ">View Details</a>
                 </div>
-            </div>
+            </div> 
         </div>
 
 
