--- a/register.html
+++ b/register.html
@@ -22,8 +22,8 @@
         <header>
             <nav class="navbar navbar-expand-md fixed-top bg-success">
                 <div class="container">
-                    <a class="navbar-brand" href="home.html">
-                        <img src="images/Earth Express.png" width="60" height="60"
+                    <a class="navbar-brand text-white" href="home.html">
+                        <img src="images/Earth_Express.png" width="60" height="60"
                         class="d-inline-block align-top" alt="Earth Express Logo">
                         Earth Express
                     </a>
@@ -31,19 +31,19 @@
                     <div class="collapse navbar-collapse" id="navbarCollpase">
                         <ul class="nav navbar-nav mr-auto">
                             <li class="nav-item active">
-                                <a href="home.html" class="nav-link active">Home</a>
+                                <a href="home.html" class="nav-link active text-white">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a href="products.html" class="nav-link">Products</a>
+                                <a href="products.html" class="nav-link text-white">Products</a>
                             </li>
                             <li class="nav-item">
-                                <a href="register.html" class="nav-link">Register</a>
+                                <a href="register.html" class="nav-link text-white">Register</a>
                             </li>
                             <li class="nav-item">
-                                <a href="login.html" class="nav-link">Login</a>
+                                <a href="login.html" class="nav-link text-white">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a href="cart.html" class="nav-link">Cart</a>
+                                <a href="cart.html" class="nav-link text-white">Cart</a>
                             </li>
                         </ul>
                     </div>
@@ -59,7 +59,7 @@
     <div class="container mt-5">
         <p>Let's get you up and running with you online account.We need few details.</p>
         <form class="border border-dark border-3 pb-1 needs-validation" novalidate>
-            <h2 class="text-center">Account Details</h2>
+            <h2 class="text-center mt-2">Account Details</h2>
             <div class="form-group m-2">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" class="form-control" id="exampleInputuserid" placeholder="Enter Username" required>
@@ -122,7 +122,7 @@
                     <input type="radio" class="form-check-input" >
                     <label class="form-check-label">Others</label>
                   </div>
-                  <button type="submit" class="btn btn-primary m-2 width=30px">Register</button>
+                  <button type="submit" class="btn btn-warning m-2 width=30px">Register</button>
 
                 </form>
               </div>
