--- a/login.html
+++ b/login.html
@@ -9,6 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">   
+
+
     <link type="text/css" rel="stylesheet" href="./css/style.css">
 
 
@@ -23,7 +29,8 @@
                 <a class="navbar-brand text-white" href="home.html">
                     <img src="images/Earth_Express.png" width="60" height="60"
                     class="d-inline-block align-top" alt="Earth Express Logo">
-                    Earth Express
+                    <span class="fs-2" style="font-family: Pacifico">Earth Express</span>
+
                 </a>
             
                 <div class="collapse navbar-collapse" id="navbarCollpase">
@@ -121,6 +128,7 @@
             </div>
         </div>
     </footer>
+    <br>
 
 
 
