--- a/products.html
+++ b/products.html
@@ -9,13 +9,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link type="text/css" rel="stylesheet" href="./css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">   
+
+        <link type="text/css" rel="stylesheet" href="./css/style.css">
 
 
 
 </head>
 
-<body>
+<body style="background-image: none;">
 
     !-- Navigation Bar -->
     <header>
@@ -24,7 +28,8 @@
                 <a class="navbar-brand text-white" href="home.html">
                     <img src="images/Earth_Express.png" width="60" height="60" class="d-inline-block align-top"
                         alt="Earth Express Logo">
-                    Earth Express
+                        <span class="fs-2" style="font-family: Pacifico">Earth Express</span>
+
                 </a>
 
                 <div class="collapse navbar-collapse" id="navbarCollpase">
@@ -56,9 +61,9 @@
 
     <!-- Card for Products-->
 
-    <div class="container mt-2">
+    <div class="container m5 p-5">
         <div class="row p-5 g-2">
-            <div class="card border-warning me-2" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 16rem;">
                 <img src="./images/products/20SweetCorn-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Sweet Corn</h5>
@@ -68,7 +73,7 @@
                     <a href="./sweetcorn.html" class="btn btn-success">View Details</a>
                 </div>
             </div>
-            <div class="card border-warning me-2" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 16rem;">
                 <img src="./images/products/40RedPumpkin-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Pumpkin</h5>
@@ -78,7 +83,7 @@
                     <a href="#" class="btn btn-success">View Details</a>
                 </div>
             </div>
-            <div class="card border-warning me-2" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 16rem;">
                 <img src="./images/products/cloves-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Cloves</h5>
@@ -89,7 +94,7 @@
                 </div>
             </div>
 
-            <div class="card border-warning me-2" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 16rem;">
                 <img src="./images/products/CoconutOil-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Coconut Oil</h5>
@@ -99,7 +104,7 @@
                     <a href="#" class="btn btn-success">View Details</a>
                 </div>
             </div>
-            <div class="card border-warning me-2" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 16rem;">
                 <img src="./images/products/Deha_s_Organic_Chai_-_Assam_Green_Tea_-_02_1024x1024-204x210.jpg"
                     class="card-img-top" alt="Cat1">
                 <div class="card-body">
@@ -110,7 +115,7 @@
                     <a href="#" class="btn btn-success">View Details</a>
                 </div>
             </div>
-            <div class="card border-warning me-2" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 16rem;">
                 <img src="./images/products/Honey2-204x210.jpeg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Honey</h5>
@@ -120,7 +125,7 @@
                     <a href="#" class="btn btn-success">View Details</a>
                 </div>
             </div>
-            <div class="card border-warning me-2" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 16rem;">
                 <img src="./images/products/desigherglassbottle-204x210.jpg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Clarified Butter/Ghee</h5>
@@ -130,7 +135,7 @@
                     <a href="#" class="btn btn-success">View Details</a>
                 </div>
             </div>
-            <div class="card border-warning me-2" style="width: 18rem;">
+            <div class="card border-warning me-2" style="width: 16rem;">
                 <img src="./images/products/Hummus-204x210.jpeg" class="card-img-top" alt="Cat1">
                 <div class="card-body">
                     <h5 class="card-title">Hummus</h5>
@@ -182,7 +187,7 @@
             </div>
         </footer>
 
-
+        <br>
     </div>
 
     
